...
                                        textAlign: TextAlign.center)))
                          ]);
                        index--;
                        return index >= state.assets.length
                            ? BottomLoader()
                            : Dismissible(
                                key: Key('assetItem'),
                                direction: DismissDirection.startToEnd,
                                child: AssetListItem(
                                    asset: state.assets[index], index: index));
                      },
                    )));
          default:
...
