...
import 'package:core/domains/domains.dart';

import '../../../api_repository.dart';

class AssetDialog extends StatefulWidget {
  final Asset asset;
  AssetDialog(this.asset);
  @override
  _AssetState createState() => _AssetState(asset);
}

class _AssetState extends State<AssetDialog> {
  final Asset asset;
...
