...
import 'package:core/domains/domains.dart';
import 'package:core/templates/@templates.dart';
import '../../../api_repository.dart';

class ProductDialog extends StatelessWidget {
  final Product product;
  const ProductDialog(this.product);
  @override
  Widget build(BuildContext context) {
    return BlocProvider(
      create: (BuildContext context) =>
          CategoryBloc(context.read<APIRepository>())..add(CategoryFetch()),
      child: ProductDialogFull(product),
...
              )
            ],
          )),
      Row(children: [
        Expanded(
            child: ElevatedButton(
                key: Key('update'),
                child: Text(product.productId.isEmpty ? 'Create' : 'Update'),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    Uint8List? image =
                        await HelperFunctions.getResizedImage(_imageFile?.path);
                    if (_imageFile?.path != null && image == null)
...
    return Scaffold(
        backgroundColor: Colors.transparent,
        floatingActionButton: imageButtons(context, _onImageButtonPressed),
        body: Form(
            key: _formKey,
            child: SingleChildScrollView(
                key: Key('listView'),
                child: Column(children: <Widget>[
                  Center(
                      child: Text(
                    'Product #${product.productId.isEmpty ? " New" : product.productId}',
                    style: TextStyle(
                        fontSize: 10,
...
