...
                    child: Text("no items found!",
                        key: Key('empty'), textAlign: TextAlign.center));
              final item = items[index - 1];
              var itemType = state.itemTypes
                  .firstWhere((e) => e.itemTypeId == item.itemTypeId);
              return ListTile(
                  key: Key('productItem'),
                  leading: !isPhone
                      ? CircleAvatar(
                          backgroundColor: Colors.green,
                          child: Text(item.itemSeqId.toString()),
                        )
                      : null,
...
                        controller: _quantityController,
                        keyboardType: TextInputType.number,
                      ),
                    ])))),
        actions: <Widget>[
          ElevatedButton(
            key: Key('cancel'),
            child: Text('Cancel'),
            onPressed: () {
              Navigator.of(context).pop();
            },
          ),
          ElevatedButton(
...
