...
            "All Opportunities: ${authenticate.stats!.opportunities}",
            "My Opportunities: ${authenticate.stats!.myOpportunities}",
            "Leads: ${authenticate.stats!.leads}",
            "Customers: ${authenticate.stats!.customers}",
          ),
          makeDashboardItem(
            'dbCatalog',
            context,
            menuOptions[3],
            "Categories: ${authenticate.stats!.categories}",
            "Products: ${authenticate.stats!.products}",
            "Assets: ${authenticate.stats!.products}",
            "",
...
